Added Opacity option to the slider text background color Imported from Changeset 2805

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -983,6 +983,10 @@
     <Compile Include="Migrations\202007130133158_ShowInTopCategory-flag-added-in-Website-Navigations.designer.cs">
       <DependentUpon>202007130133158_ShowInTopCategory-flag-added-in-Website-Navigations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.cs" />
+    <Compile Include="Migrations\202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.designer.cs">
+      <DependentUpon>202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2040,6 +2044,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007130133158_ShowInTopCategory-flag-added-in-Website-Navigations.resx">
       <DependentUpon>202007130133158_ShowInTopCategory-flag-added-in-Website-Navigations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.resx">
+      <DependentUpon>202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
