--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -987,6 +987,10 @@
     <Compile Include="Migrations\202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.designer.cs">
       <DependentUpon>202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007151653139_homepagedetails-added.cs" />
+    <Compile Include="Migrations\202007151653139_homepagedetails-added.designer.cs">
+      <DependentUpon>202007151653139_homepagedetails-added.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2047,6 +2051,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.resx">
       <DependentUpon>202007132001335_added-ForeColorOpacity-to-WebsiteSliders-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007151653139_homepagedetails-added.resx">
+      <DependentUpon>202007151653139_homepagedetails-added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
