--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1419,6 +1419,7 @@
     <Content Include="Views\Theme\University\Shared\_ShippingAddressSelector.cshtml" />
     <Content Include="Views\Theme\University\Orders\PayPal.cshtml" />
     <Content Include="Views\Theme\University\Orders\_AddressDetail.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_CartItemModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
