added contact us page customization Imported from Changeset 2901

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -991,6 +991,14 @@
     <Compile Include="Migrations\202007151653139_homepagedetails-added.designer.cs">
       <DependentUpon>202007151653139_homepagedetails-added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007222028136_added_ContactReceiverEmail_field_to_TenantWebsites_table.cs" />
+    <Compile Include="Migrations\202007222028136_added_ContactReceiverEmail_field_to_TenantWebsites_table.designer.cs">
+      <DependentUpon>202007222028136_added_ContactReceiverEmail_field_to_TenantWebsites_table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202007222055027_added_LinkPageUrl_field_to_WebsiteNavigations_table.cs" />
+    <Compile Include="Migrations\202007222055027_added_LinkPageUrl_field_to_WebsiteNavigations_table.designer.cs">
+      <DependentUpon>202007222055027_added_LinkPageUrl_field_to_WebsiteNavigations_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2054,6 +2062,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007151653139_homepagedetails-added.resx">
       <DependentUpon>202007151653139_homepagedetails-added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007222028136_added_ContactReceiverEmail_field_to_TenantWebsites_table.resx">
+      <DependentUpon>202007222028136_added_ContactReceiverEmail_field_to_TenantWebsites_table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007222055027_added_LinkPageUrl_field_to_WebsiteNavigations_table.resx">
+      <DependentUpon>202007222055027_added_LinkPageUrl_field_to_WebsiteNavigations_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
