--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -380,8 +380,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Theme\University\app\js\jquery-confirm.min.js" />
-    <Content Include="Content\Theme\University\app\css\App.css" />
-    <Content Include="Content\Theme\University\app\css\northumbria_responsive.css" />
+    <Content Include="Content\Theme\University\app\css\app.css" />
+    <Content Include="Content\Theme\University\app\css\app_responsive.css" />
     <Content Include="Content\Theme\University\app\css\owl.carousel.min.css" />
     <Content Include="Content\Theme\University\app\css\skew_carousle_style.css" />
     <Content Include="fonts\segoeui\SegoeUI-Bold.svg">
@@ -569,7 +569,6 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="Content\Theme\University\app\css\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\fontawesome-webfont.svg" />
@@ -649,8 +648,6 @@
     <Content Include="Views\Theme\University\Shared\_TopHeaderPartial.cshtml" />
     <Content Include="Views\Theme\University\_ViewStart.cshtml" />
     <Content Include="Views\Theme\University\Shared\_Layout.cshtml" />
-    <Content Include="Content\Theme\University\app\css\northumbria_custom.less" />
-    <Content Include="Content\Theme\University\app\css\northumbria_responsive.less" />
     <Content Include="Views\Theme\University\Home\Index.cshtml" />
     <Content Include="fonts\segoeui\SegoeUI-Bold.eot">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
